--- a/app/src/main/res/layout/single_food_view.xml
+++ b/app/src/main/res/layout/single_food_view.xml
@@ -33,6 +33,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/resto_name_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -44,6 +45,7 @@
                     android:layout_marginTop="10dp"/>
 
                 <TextView
+                    android:id="@+id/resto_loc_search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Spaghetti"
