--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="tech.fireflies.nkeksi.Home">
 
-    <include
-        android:id="@+id/tool"
-        layout="@layout/toolbar" />
-
-    <com.miguelcatalan.materialsearchview.MaterialSearchView
-        android:id="@+id/search_bar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:searchBackground="@color/colorPrimary"
-        android:textColorHint="#fff" />
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/tool"
+            layout="@layout/toolbar" />
+
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:textColorHint="#fff"
+            app:searchBackground="@color/colorPrimary" />
+
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/search_bar">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -47,4 +53,4 @@
 
         </RelativeLayout>
     </ScrollView>
-</RelativeLayout>
+</LinearLayout>
