--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:orderInCategory="200"/>
     <item
         android:id="@+id/search"
-        android:title="Search"
+        android:title="Map"
         android:orderInCategory="100"/>
     <item
         android:id="@+id/action_search"
