--- a/app/src/main/res/layout/activity_getting_started_user.xml
+++ b/app/src/main/res/layout/activity_getting_started_user.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tech.fireflies.nkeksi.GettingStartedUser">
+    tools:context="tech.firefly.nkeksi.GettingStartedUser">
 
     <ImageView
         android:layout_width="100dp"
