--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tech.fireflies.nkeksi.Home">
+    tools:context="tech.firefly.nkeksi.Home">
 
     <RelativeLayout
         android:layout_width="match_parent"
