--- a/app/src/main/res/layout/single_menu_view.xml
+++ b/app/src/main/res/layout/single_menu_view.xml
@@ -7,6 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/food_view_bg"
+        android:elevation="10dp"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -16,29 +19,31 @@
 
             <com.mikhaellopez.circularimageview.CircularImageView
                 android:id="@+id/dish_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="30dp"
-                android:src="@drawable/meat3" />
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/meat" />
 
             <LinearLayout
-                android:id="@+id/dish_price"
                 android:layout_width="80dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="80dp"
-                android:layout_marginTop="90dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="80dp"
                 android:background="@drawable/resto_rate_button"
                 android:orientation="horizontal"
                 android:textColor="#fff">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/dish_price"
+                    android:layout_width="35dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:text="1000"
                     android:textColor="#fff"
                     android:textStyle="bold" />
@@ -48,9 +53,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_marginLeft="5dp"
-                    android:textColor="#f5bf03"
                     android:layout_marginRight="3dp"
                     android:text="XAF"
+                    android:textColor="#f5bf03"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -76,6 +81,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="Deep Fried Potato abd Stew"
                 android:textSize="15sp" />
         </LinearLayout>
