--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#4dd87b</color>
     <color name="colorPrimaryDark">#599104</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#4dd87b</color>
 </resources>
