--- a/app/src/main/res/layout/activity_food_item_detail.xml
+++ b/app/src/main/res/layout/activity_food_item_detail.xml
@@ -11,6 +11,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/foodDetailList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"/>
 
 </LinearLayout>
