--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,12 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-
             <com.synnapps.carouselview.CarouselView
                 android:id="@+id/slide_me"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-
                 app:animateOnBoundary="true"
                 app:autoPlay="true"
                 app:fillColor="@color/colorPrimary"
@@ -57,15 +56,43 @@
 
     </ScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/shopping_cart"
+    <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/home_fab_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
-        android:src="@drawable/ic_shopping_cart_white_24dp"
-        app:backgroundTint="@color/colorPrimary"
-        app:fabSize="normal" />
+        app:menu_fab_size="normal">
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/profileFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_person"
+            app:fab_label="Profile"
+            app:fabSize="mini"
+            app:menu_fab_size="mini"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/settingFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_settings"
+            app:fab_label="Setting"
+            app:fabSize="mini"/>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/logoutFAB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_exit"
+            app:fab_label="Logout"
+            app:fabSize="mini" />
+
+    </com.github.clans.fab.FloatingActionMenu>
+
 </RelativeLayout>
