--- a/app/src/main/res/layout/cell_titled_foldable.xml
+++ b/app/src/main/res/layout/cell_titled_foldable.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tool="http://schemas.android.com/tools">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/food_view_bg"
-        android:layout_margin="10dp">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/lay1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/food_view_bg"
         android:elevation="10dp"
         android:orientation="horizontal">
 
@@ -29,7 +23,6 @@
                 android:layout_height="90dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/meat" />
 
@@ -37,34 +30,33 @@
                 android:layout_width="80dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="60dp"
-                android:layout_marginStart="60dp"
                 android:layout_marginTop="80dp"
                 android:background="@drawable/resto_rate_button"
                 android:orientation="horizontal"
                 android:textColor="#fff">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    tool:text="XAF"
-                    android:textColor="#f5bf03"
-                    android:textStyle="bold" />
-
-                <TextView
                     android:id="@+id/dish_price"
                     android:layout_width="35dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    tool:text="1000"
+                    android:text="1000"
                     android:textColor="#fff"
                     android:textStyle="bold" />
 
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="3dp"
+                    android:text="XAF"
+                    android:textColor="#f5bf03"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </RelativeLayout>
@@ -74,14 +66,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/dish_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tool:text="Potato"
+                android:text="Potato"
                 android:textColor="#000"
                 android:textSize="20sp" />
 
@@ -92,22 +83,9 @@
                 android:layout_marginTop="15dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-                tool:text="Deep Fried Potato abd Stew"
+                android:text="Deep Fried Potato abd Stew"
                 android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 
-    <me.wangyuwei.shoppoing.ShoppingView
-        android:id="@+id/dish_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lay1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        app:sv_bg_color="#4dd87b"
-        app:sv_duration="1000"
-        app:sv_text="GET"
-        app:sv_text_size="18sp" />
-    </RelativeLayout>
-
-</RelativeLayout>
+</LinearLayout>
