--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,12 @@
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
-        android:orderInCategory="200"
         android:title="Search"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/shop_cart"
+        android:title="Cart"
+        android:icon="@drawable/ic_shopping_cart_white_24dp"
+        app:actionLayout="@layout/menu_action_item_badge"
+        app:showAsAction="always"/>
 </menu>
