--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,15 +25,17 @@
 
     </RelativeLayout>
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/lay2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lay1">
+        android:layout_below="@+id/lay1"
+        android:clipToPadding="false">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <com.synnapps.carouselview.CarouselView
                 android:id="@+id/slide_me"
@@ -52,9 +54,9 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/slide_me" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/home_fab_menu"
