--- a/app/src/main/res/layout/fragment_frag_menu.xml
+++ b/app/src/main/res/layout/fragment_frag_menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="tech.firefly.nkeksi.fragDetails">
+    tools:context="tech.firefly.nkeksi.fragment.fragDetails">
 
 
     <android.support.v7.widget.RecyclerView
