--- a/app/src/main/res/layout/fragment_frag_review.xml
+++ b/app/src/main/res/layout/fragment_frag_review.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tech.firefly.nkeksi.fragDetails">
+    tools:context="tech.firefly.nkeksi.fragment.fragDetails">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
