--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,9 +27,8 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/lay2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lay1"
-        android:clipToPadding="false">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/lay1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,25 +73,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_person"
-            app:fab_label="Profile"
             app:fabSize="mini"
-            app:menu_fab_size="mini"/>
+            app:fab_label="Profile"
+            app:menu_fab_size="mini" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/settingFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_settings"
-            app:fab_label="Setting"
-            app:fabSize="mini"/>
+            app:fabSize="mini"
+            app:fab_label="Setting" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/logoutFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_exit"
-            app:fab_label="Logout"
-            app:fabSize="mini" />
+            android:src="@drawable/ic_favorite_white"
+            app:fabSize="mini"
+            app:fab_label="Favourite" />
 
     </com.github.clans.fab.FloatingActionMenu>
 
