--- a/app/src/main/res/layout/fragment_frag_details.xml
+++ b/app/src/main/res/layout/fragment_frag_details.xml
@@ -26,6 +26,11 @@
         android:textColor="#fff"
         android:textSize="20sp"
         android:textStyle="bold" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#c0c0c0"
+        android:layout_below="@+id/resto_image_wall"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -42,6 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:text="Fatima"
                 android:textColor="#000"
@@ -133,6 +139,12 @@
                 android:layout_gravity="center_horizontal"
                 android:text="Fatima Restaurant "
                 android:textAlignment="center" />
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20dp"/>
         </LinearLayout>
 
     </ScrollView>
