--- a/app/src/main/res/layout/activity_cart_detail.xml
+++ b/app/src/main/res/layout/activity_cart_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tech.firefly.nkeksi.CartDetail">
+    tools:context="tech.firefly.nkeksi.user.CartDetail">
 
     <include
         android:id="@+id/tool"
