--- a/app/src/main/res/layout/activity_delivery_address.xml
+++ b/app/src/main/res/layout/activity_delivery_address.xml
@@ -43,9 +43,11 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
         android:background="#fff"
+        android:inputType="textCapWords"
         android:drawableLeft="@drawable/ic_person_green"
         android:drawablePadding="10dp"
-        android:hint="Enter Quarter" />
+        android:hint="Enter Quarter"
+        android:maxLines="1" />
 
     <Button
         android:layout_width="match_parent"
@@ -55,12 +57,12 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/delivery_address_button_bg"
+        android:onClick="SaveDeliveryAddress"
         android:padding="20dp"
         android:text="SAVE"
         android:textColor="#fff"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:onClick="SaveDeliveryAddress"/>
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
