--- a/app/src/main/res/layout/activity_enter_resto_detail.xml
+++ b/app/src/main/res/layout/activity_enter_resto_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#c0c0c0"
-    tools:context="tech.firefly.nkeksi.Enter_Resto_Detail">
+    tools:context="tech.firefly.nkeksi.tests.Enter_Resto_Detail">
 
     <EditText
         android:id="@+id/description_temp"
