--- a/app/src/main/res/layout/activity_getting_started_user.xml
+++ b/app/src/main/res/layout/activity_getting_started_user.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tech.firefly.nkeksi.GettingStartedUser">
+    tools:context="tech.firefly.nkeksi.login.GettingStartedUser">
 
     <ImageView
         android:layout_width="100dp"
@@ -60,6 +60,14 @@
         android:text="REGISTER"
         android:textColor="#fff"
         android:onClick="RegisterBtn"/>
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/googleSignIn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"/>
 
 
 </LinearLayout>
