--- a/app/src/main/res/layout/activity_register_second_user.xml
+++ b/app/src/main/res/layout/activity_register_second_user.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tech.firefly.nkeksi.RegisterSecondUser">
+    tools:context="tech.firefly.nkeksi.login.RegisterSecondUser">
 
     <include
         android:id="@+id/tool"
