--- a/app/src/main/res/layout/fragment_frag_details.xml
+++ b/app/src/main/res/layout/fragment_frag_details.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="tech.firefly.nkeksi.RestoDashBoard">
+    tools:context="tech.firefly.nkeksi.ui.RestoDashBoard">
 
     <ImageView
         android:id="@+id/resto_image_wall"
