--- a/app/src/main/res/layout/single_home_temp.xml
+++ b/app/src/main/res/layout/single_home_temp.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.flaviofaria.kenburnsview.KenBurnsView
                 android:id="@+id/image_home_temp"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
